tests/typing/bad/testfile-return-2.scala

class C { var x = return 1 }
object Main { def main(args: Array[String]) { } }
